# Tere_verde_back

./: README.md  pyproject.toml  requisitos.md
src/: main.py
src/DB/: config.py
src/auth/: auth.py  token.py
src/models/: models.py
src/routers/: admins.py  eventos.py  logs.py  queries.py
src/schemas/: schema_env.py  schemas_routes.py
src/services/: chat.py  weather.py
